--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
     # network_mode: host
     volumes:
       - media-volume:/docbot
-      - output-volume:/pdf_generator/output
+      - output-volume:/pdf_generator/output:z
     restart: always
+    security_opt:
+      - apparmor=unconfined
     # dns:
     #   - 8.8.8.8
     #   - 8.8.4.4
@@ -20,6 +22,7 @@ networks:
     driver: bridge
     driver_opts:
       com.docker.network.driver.mtu: 1450
+
 
 volumes:
   media-volume:
