--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     # network_mode: host
     volumes:
       - media-volume:/docbot
-      - output-volume:/pdf_generator/output:z
+      - ./pdf_generator/output:/pdf_generator/output:z
     restart: always
     security_opt:
       - apparmor=unconfined
@@ -26,5 +26,5 @@ networks:
 
 volumes:
   media-volume:
-  output-volume:
+  /pdf_generator/output:
 
