--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     # network_mode: host
     volumes:
       - media-volume:/docbot
-      - ./pdf_generator/output:/pdf_generator/output:z
+      # - ./pdf_generator/output:/pdf_generator/output:z
     restart: always
     security_opt:
       - apparmor=unconfined
